<resources>
    <string name="app_name">Letto</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_property">Manage</string>
    <string name="title_aboutUs">AboutUs</string>
    <string name="title_notification">Notification</string>
    <string name="register">Register</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="cont">continue</string>
    <string name="enter_otp">Enter otp</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend otp</string>
    <string name="login">Login</string>
    <string name="already_member">Already registered ? </string>
    <string name="address">Address</string>
    <string name="house">House Number</string>
    <string name="street">Street Name</string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="pin">Pincode</string>
    <string name="landmark">Landmark</string>
    <string name="type">What is your property like ?</string>
    <string name="type1">P.G.</string>
    <string name="type2">Flat</string>
    <string name="type3">Hostel</string>
    <string name="rooms">Number of rooms</string>
    <string name="lunch">Is lunch available ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="private_">Private</string>
    <string name="shared">Shared</string>
    <string name="beds">Number of beds</string>
    <string name="single">1</string>
    <string name="double_">2</string>
    <string name="triple">3</string>
    <string name="four">4</string>
    <string name="bhk">B.H.K. (1 , 2 , 3 , 4)</string>
    <string name="nbhk">Number of such B.H.K.s</string>
    <string name="preferance">What is your Preferance ?</string>
    <string name="family">Family</string>
    <string name="both">Both</string>
    <string name="student">Student</string>
    <string name="genderM">Male</string>
    <string name="genderF">Female</string>
    <string name="Upload">Upload 1 Photo</string>
    <string name="rest">Rest Photos will be uploaded Later</string>
    <string name="features">Features of your Rooms</string>
    <string name="add">Add More</string>
    <string name="additional">Additional Information</string>
    <string name="rules">Rules</string>
    <string name="rule1">What is the gate closing time ?</string>
    <string name="rule2">Are Opposite Gender Friends Allowed ?</string>
    <string name="rule3">Drinking and Smoking Allowed ?</string>
    <string name="price">Fix the Rent</string>
    <string name="flatprice">Price of the Flat</string>
    <string name="singleBed">Single Bed Price</string>
    <string name="doubleBed">Double Bed Price</string>
    <string name="tripleBed">Triple Bed Price</string>
    <string name="fourBed">Four Bed Price</string>
    <string name="gender">Preferred gender</string>
</resources>
