<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.RegisterPage"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="@dimen/margin"
    android:padding="@dimen/padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/register"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/H2"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:layout_marginTop="@dimen/margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/black"
            android:padding="@dimen/padding"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/black"
            android:padding="@dimen/padding"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:hint="@string/enter_otp"
            android:textColor="@color/black"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="6" />
        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/otp"
            android:layout_alignRight="@id/otp"
            android:textSize="@dimen/normal_text"/>
        </RelativeLayout>
        <Button
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:text="@string/cont"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_member"
                android:layout_gravity="center"
                android:textSize="@dimen/small_text"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/padding"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>